tests/sksl/errors/BitShiftFloatMatrix.dsl.glsl
### Compilation failed:

error: type mismatch: '>>=' cannot operate on 'float2x2', 'int'

error: type mismatch: '<<=' cannot operate on 'float2x2', 'int'

error: type mismatch: '&=' cannot operate on 'float2x2', 'int'

error: type mismatch: '|=' cannot operate on 'float2x2', 'int'

error: type mismatch: '^=' cannot operate on 'float2x2', 'int'

error: type mismatch: '>>' cannot operate on 'float2x2', 'int'

error: type mismatch: '<<' cannot operate on 'float2x2', 'int'

error: type mismatch: '&' cannot operate on 'float2x2', 'int'

error: type mismatch: '|' cannot operate on 'float2x2', 'int'

error: type mismatch: '^' cannot operate on 'float2x2', 'int'

10 errors
